# rust-ifrs-hledger

./: Cargo.toml  LICENSE  README.md
res/: cash_flow_statement_template.txt
src/: errors.rs  lib.rs  util.rs
src/impl/: mod.rs
src/impl/data/datasources/: balances_csv_datasource.rs  transactions_csv_datasource.rs
src/impl/data/models/: accounting_amount_model.rs  accounting_logic_model.rs  backing_account_model.rs  command_logic_model.rs  iso_date_model.rs  operation_logic_model.rs
src/impl/data/repositories/: records_repository_impl.rs
src/impl/domain/entities/: account.rs  annotation.rs  assertion.rs  assertion_spec.rs  cashflow_tag.rs  cashflow_tracing_tag.rs  command.rs  decorator_logic.rs  end_of_year_entry.rs  financial_records.rs  handlers.rs  meta_entry.rs  note.rs  operation.rs  operation_spec.rs  transaction.rs  transaction_spec.rs
src/impl/domain/logic/: account_impl.rs  annotation_processor.rs  command_processor.rs  decorator_processor.rs  (+3 more)
src/impl/presentation/: account_fmt.rs  accounts.rs  cashflow_tag_fmt.rs  cashflow_tracing_tag_fmt.rs  closing_section.rs  hledger_printer.rs  utils.rs
src/impl_ext/: mod.rs
src/impl_ext/cash_flow_statement/: generator.rs
src/impl_ext/custom_statements/: cash_flow_statement_generator.rs  utils.rs
src/impl_ext/derived_entries/: close_entry_generator.rs
src/impl_ext/derived_records/: close_record_generator.rs
src/impl_ext/standard_accounts/: core.rs  vat.rs
src/impl_ext/standard_decorators/: card_fx.rs  card_fx_by_fee.rs  card_fx_by_settle.rs  payment_fee.rs  vat_korea.rs  withholding_tax.rs
(+2 files in other folders)
